<?xml version="1.0"?>
<package>
  <name>rqt_ptam</name>
  <version>0.0.1</version>
  <description>
    
     Remote PTAM plugin for rqt, based on rqt_image_view from Dirk Thomas, TU Darmstadt

  </description>
  
  <maintainer email="markus.achtelik@mavt.ethz.ch">Markus Achtelik</maintainer>
  <maintainer email="stephan.weiss@mavt.ethz.ch">Stephan Weiss</maintainer>
  <maintainer email="simon.lynen@mavt.ethz.ch">Simon Lynen</maintainer>

  <license>see http://www.robots.ox.ac.uk/~gk/PTAM/download.html </license>

  <url>http://ros.org/wiki/ethzasl_ptam/rqt_ptam</url>
  <url type="repository">https://github.com/ethz-asl/ethzasl_ptam</url>
  <url type="bugtracker">https://github.com/ethz-asl/ethzasl_ptam/issues</url>

  <author email="markus.achtelik@mavt.ethz.ch">Markus Achtelik</author>
  <author email="stephan.weiss@mavt.ethz.ch">Stephan Weiss</author>
  <author email="simon.lynen@mavt.ethz.ch">Simon Lynen</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ptam_com</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>